--- a/style.css
+++ b/style.css
@@ -72,18 +72,11 @@ body {
     padding: 1.5rem 1.1rem;
 }
 
-.bb {
+.margin-bottom-padding {
     border-bottom: 1px solid var(--gunmetal);
-}
-
-.mb {
     margin-bottom: 1.75rem;
-}
-
-.pb {
     padding-bottom: 1.75rem;
 }
-
 
 
 .segunda-seção h2 {
@@ -105,4 +98,38 @@ body {
     font-size: 0.9375rem;
     line-height: 1.625rem;
 
+}
+
+.terceira-seção > div{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.terceira-seção img {
+    max-width: 6.24rem;
+
+}
+
+.terceira-seção strong {
+    color:var(--silver);
+    font-size: 2rem;
+    line-height: 100%;
+}
+
+
+.terceira-seção h2 {
+    color:var(--dark-blue);
+    font-size: 1.125rem;
+    font-weight: 800rem;
+    line-height: 1.5rem;
+    margin-block: 0.6rem;
+
+}
+
+.terceira-seção p {
+    font-size: 0.9375rem;
+    line-height: 1.625rem;
+    color: var(--gunmetal);
 }
